--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,10 @@
 body {
-  color: #1E90FF;
+  color: #003366;
+}
+
+.search-box-container {
+  background-color: #e9ecef;
+  border: 1px solid #dee2e6;
+  padding: 15px;
+  margin-bottom: 20px;
 }
