--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,3 +8,19 @@ body {
   padding: 15px;
   margin-bottom: 20px;
 }
+
+.add-post-container {
+  background-color: #e9ecef;
+  border: 1px solid #dee2e6;
+  padding: 15px;
+  margin: 20px 0;
+}
+
+.preview {
+  font-size: 20px;
+  padding: 8px 0;
+}
+
+.mce-notification {
+  display: none;
+}
